--- a/src/gui/GUI0.fxml
+++ b/src/gui/GUI0.fxml
@@ -66,7 +66,7 @@
                                         <Insets left="10.0" />
                                     </padding>
                                 </Label>
-                                <Button layoutX="71.0" layoutY="835.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="215.0" text="Hiển thị">
+                                <Button layoutX="71.0" layoutY="835.0" mnemonicParsing="false" onAction="#reloadKhoanPhiTable" prefHeight="53.0" prefWidth="215.0" text="reload">
                                     <font>
                                         <Font size="25.0" />
                                     </font>
@@ -262,7 +262,7 @@
                                         <Insets left="10.0" />
                                     </padding>
                                 </Label>
-                                <Button layoutX="71.0" layoutY="835.0" mnemonicParsing="false" prefHeight="53.0" prefWidth="215.0" text="Dọn">
+                                <Button layoutX="71.0" layoutY="835.0" mnemonicParsing="false" onAction="#reloadThuPhiHoGiaDinhTable" prefHeight="53.0" prefWidth="215.0" text="reload">
                                     <font>
                                         <Font size="25.0" />
                                     </font>
